Clean up and refactoring of sonar warnings.